<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    </View>

    <TextView
        android:id="@+id/textView_custom_event_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/custom_events_question"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView_custom_event_demo_text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_custom_event_yes"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/deep_purple_900"
        android:text="@string/custom_events_question_answer_yes"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_custom_event_question"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="@+id/textView_custom_event_question"
        app:layout_constraintTop_toBottomOf="@+id/textView_custom_event_question"
        app:layout_constraintVertical_bias="0.064" />

    <Button
        android:id="@+id/button_custom_event_no"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/deep_purple_900"
        android:text="@string/custom_events_question_answer_no"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_custom_event_question"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="@+id/textView_custom_event_question"
        app:layout_constraintTop_toBottomOf="@+id/textView_custom_event_question"
        app:layout_constraintVertical_bias="0.064" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="116dp"
        android:layout_height="144dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView_predefined_event_demo_text"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/product" />

    <TextView
        android:id="@+id/textView_phone_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/phone_brand"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_phone_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/phone_name"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/textView_phone_brand"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_phone_brand"
        app:layout_constraintTop_toBottomOf="@+id/textView_phone_brand"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_phone_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/phone_price"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/textView_phone_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_phone_name"
        app:layout_constraintTop_toBottomOf="@+id/textView_phone_name"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_add_to_cart"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/deep_purple_900"
        android:text="@string/button_add_to_cart"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/textView_phone_price"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_phone_price"
        app:layout_constraintTop_toBottomOf="@+id/textView_phone_price"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_predefined_event_demo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textView_predefined_event_demo_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_custom_event_demo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textView_custom_event_demo_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

